<resources>
    <string name="app_name">ForexExchangeRates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Errors -->
    <string name="generic_network_error">Oops! Something went wrong, do you have an active network connection?</string>
    <string name="network_error_api_call_limit">Monthly API call limit exceeded.</string>

    <!-- List Of Currencies Strings -->
    <string name="list_of_currencies_page_title">FX Exchange Rates</string>
    <string name="list_of_currencies_selected_amount_format">%s/%s Selected</string>
    <string name="list_of_currencies_convert_multiple">Convert multiple Currencies</string>
    <string name="list_of_currencies_button_retry">Retry</string>
    <string name="list_of_currencies_amount_hint">Amount</string>
    <!-- End of List Of Currencies Strings -->


    <!-- Currency History Strings -->
    <string name="currency_history_page_title">Historic Prices</string>
    <string name="currency_history_table_date_title">Date</string>
    <string name="currency_history_button_retry">Retry</string>
    <!-- End of Currency History Strings-->


    <!-- Currency Symbols -->
    <string name="currency_codes_gbp">GBP</string>
    <string name="currency_codes_eur">EUR</string>
    <string name="currency_codes_usd">USD</string>
    <string name="currency_codes_jpy">JPY</string>
    <string name="currency_codes_aud">AUD</string>
    <string name="currency_codes_cad">CAD</string>
    <string name="currency_codes_chf">CHF</string>
    <string name="currency_codes_cny">CNY</string>
    <string name="currency_codes_sek">SEK</string>
    <string name="currency_codes_nzd">NZD</string>


</resources>